feat: filtering by CheckListStatus feature added in findPatients method.